[gd_scene load_steps=10 format=3 uid="uid://dp4ekqqe0xbmn"]

[ext_resource type="Texture2D" uid="uid://r5kifmgrrpjf" path="res://assets/ui&ux/Windows-9-Sliced.png" id="1_dy8r5"]
[ext_resource type="Script" uid="uid://cpm6p6km5jcuw" path="res://core/others/ui&ux/plant_seed_gui/plant_seed_gui.gd" id="1_y4fjv"]
[ext_resource type="PackedScene" uid="uid://cvhdeqq7o7hjm" path="res://core/others/ui&ux/confirmation_gui/confirmation_gui.tscn" id="2_d1v26"]
[ext_resource type="FontFile" uid="uid://cx18blbmm63nv" path="res://assets/fonts/PixeloidSans-Bold.ttf" id="2_r4kqn"]
[ext_resource type="PackedScene" uid="uid://k8lnbr63eqla" path="res://core/others/ui&ux/plant_seed_gui/plant_seed_slot/plant_seed_slot_gui.tscn" id="4_mjhkw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucq66"]
bg_color = Color(0, 0, 0, 0.45098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scw1m"]
bg_color = Color(0, 0, 0, 0.45098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k784y"]
bg_color = Color(0, 0, 0, 0.45098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4kqn"]
bg_color = Color(0.215686, 0.215686, 0.215686, 0.72549)

[node name="PlantSeedGUI" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -73.0
offset_right = -21.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4fjv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -551.0
offset_top = -249.0
offset_right = 598.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -188.0
offset_right = -120.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 11.08)
texture = ExtResource("1_dy8r5")
region_rect = Rect2(208, 16, 48, 48)
patch_margin_top = 16
patch_margin_bottom = 8

[node name="Label" type="Label" parent="NinePatchRect"]
custom_minimum_size = Vector2(122.48, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.8
offset_top = 4.9
offset_right = 109.68
offset_bottom = 22.9
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_r4kqn")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_ucq66")
text = "PLANT SEED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemName" type="Label" parent="NinePatchRect"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.7
offset_top = 10.8303
offset_right = 106.3
offset_bottom = 28.8303
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_r4kqn")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_scw1m")
text = "PLANT SEED"
vertical_alignment = 1

[node name="ItemRarity" type="Label" parent="NinePatchRect"]
custom_minimum_size = Vector2(93.71, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.5
offset_top = 16.3357
offset_right = 107.275
offset_bottom = 34.3357
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_r4kqn")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_k784y")
text = "PLANT SEED"
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.4
offset_top = -13.4819
offset_right = 34.6
offset_bottom = 37.5181
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_dy8r5")
region_rect = Rect2(400, 16, 48, 48)
patch_margin_top = 16
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/NinePatchRect2"]
layout_mode = 0
offset_right = 51.0
offset_bottom = 50.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = -117.0
offset_top = 64.0
offset_right = 221.0
offset_bottom = 216.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r4kqn")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 11

[node name="Container" type="GridContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 84
theme_override_constants/v_separation = 72
columns = 4

[node name="PlantSeedSlotGUI" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI2" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI3" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI4" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI5" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI6" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI7" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI8" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI9" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI10" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI11" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI12" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI13" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI14" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI15" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="PlantSeedSlotGUI16" parent="ScrollContainer/MarginContainer/Container" instance=ExtResource("4_mjhkw")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -117.0
offset_top = 227.0
offset_right = 218.0
offset_bottom = 267.0
theme_override_constants/separation = 98
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Plant"

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Cancel"

[node name="CloseButton" type="Button" parent="."]
z_index = 999
layout_mode = 0
offset_left = 219.0
offset_top = -201.0
offset_right = 235.0
offset_bottom = -185.0
scale = Vector2(5, 5)
mouse_force_pass_scroll_events = false

[node name="NinePatchRect" type="NinePatchRect" parent="CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dy8r5")
region_rect = Rect2(208, 16, 48, 48)

[node name="Label" type="Label" parent="CloseButton/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.705882
offset_top = -2.35294
offset_right = 0.705883
offset_bottom = 1.64706
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmationGUI" parent="." instance=ExtResource("2_d1v26")]
visible = false
z_index = 999
layout_mode = 1
offset_left = -542.0
offset_top = -257.0
offset_right = -542.0
offset_bottom = -257.0

[connection signal="gui_input" from="ScrollContainer/MarginContainer/Container/PlantSeedSlotGUI" to="." method="_on_plant_seed_slot_gui_input"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
